--- a/Machine Learning - Andrew Ng/assignments/machine-learning-ex3/ex3_python/ML - Regularized Logistic Regression - One-vs-All.ipynb
+++ b/Machine Learning - Andrew Ng/assignments/machine-learning-ex3/ex3_python/ML - Regularized Logistic Regression - One-vs-All.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# ML Regularized Logistic Regression - Using One-vs-All\n",
     "\n",
-    "We will use a one-vs-all logistic regression to recognize hand-written digits.\n",
+    "We will use an One-vs-all logistic regression to recognize hand-written digits.\n",
     "\n",
     "The data set contains the images pixels row-wise (20x20) plus its label.\n",
-    "The digits are labeled from 1 through 10 where 10 represent 0."
+    "The digits are labeled from 0 through 9."
    ]
   },
   {
@@ -20,7 +20,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# import pandas_profiling\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import random"
@@ -81,7 +80,7 @@
    "outputs": [],
    "source": [
     "x = np.array(data[[str(i) for i in range(1, 401)]]) # training set\n",
-    "y = np.array(data['401']) # labels (1 through 10, where 10 is 0)\n",
+    "y = np.array(data['401']) # labels (0-9)\n",
     "[m, n] = np.shape(x)"
    ]
   },
@@ -364,7 +363,7 @@
     "    for k in range(num_labels):\n",
     "        theta = np.zeros([n + 1])\n",
     "\n",
-    "        # (y == k) to pass only the class related to current k (we are training to recognize this digit)\n",
+    "        # pass only the class related to current k (we are training to recognize this digit)\n",
     "        k_y = np.zeros([m])\n",
     "        k_y[y == k] = 1\n",
     "        theta, J_history[k] = regularizedGradientDescent(X, k_y, theta, alpha, lambd, num_iters)\n",
